Fixes
Fixed stories button being too high and canceled by official ui
Fixed profile download on private accounts

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
     border-radius: 100%;
 
-    z-index: 1;
+    z-index: 100;
 
     cursor: pointer;
 }
@@ -26,7 +26,7 @@
 .instagram-profile-download-button {
     position: absolute;
     
-    bottom: -25%;
+    bottom: 20%;
     left: 50%;
 
     transform: translate(-50%, 100%);
